# DisabilityDocumentHub

./: .replit  analyze_plant_asset.py  app.py  config.py  create_favicon.py  database.py  debug_root_cause_form.py  extract_docx.py  extract_plant_asset.py  main.py  models.py  plant_asset_output.json  pyproject.toml  test_email.py
attached_assets/: Access Audit Checklist.docx  Administration of Medication Evaluation Checklist.docx  Complaints Form.docx  Food Diary Form.docx  Hazard Form.docx  Home Safety Checklist.docx  Incident Form Community Incident & Landlord Report Renee Stanton.docx  Medication Administration Form.docx  PRN Care Plan.docx  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1743402603400.txt  Pasted--Inside-services-ai-openai-service-py-def-extract-form-fields-from-image-image-path-Ex-1743412446334.txt  Pasted-Minto-Disability-Services-Document-Hub-Refined-Scope-Core-Function-1-Interactive-Form-Completion--1743317273645.txt  Pasted-Reasons-for-Inaccurate-Form-Scraping-and-Solutions-Document-Complexity-Format-Variations-Iss-1743660896221.txt  Pasted-from-flask-import-Blueprint-render-template-request-session-redirect-url-for-jsonify-from-serv-1743402582262.txt  Pasted-import-os-import-uuid-from-typing-import-List-Dict-Any-import-PyPDF2-import-docx-from-openai-impor-1743402571751.txt  Pasted-import-sqlite3-import-json-import-os-from-datetime-import-datetime-from-fpdf-import-FPDF-import-smtp-1743402591509.txt  Vehicle Safety Check Sheet.docx  Waste Risk Assessment Checklist.docx  microsoft-markitdown.txt
(+100 files in other folders)
